# swgl

./: .clang-format  .gitmodules  CMakeLists.txt
benchmark/: CMakeLists.txt
example/: CMakeLists.txt  imgui.cpp  shaders.cpp  tinyrendertut.cpp
include/swgl/: algorithm.hpp  camera.hpp  colour.hpp  geometry.hpp  image.hpp  model.hpp  pipeline.hpp  pipeline_counters.hpp  shade_vertex_result.hpp
include/swgl/geometry/: barycentric.hpp  bbox.hpp  initialisers.hpp  matrix.hpp  vector.hpp
include/swgl/shaders/: basic_lighted_model.hpp  flat.hpp  gouraud.hpp  phong.hpp
src/: image.cpp  main.cpp  model.cpp  pipeline.cpp
test/: CMakeLists.txt
